[package]
name = "convey"
authors = ["Cryptex"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "json", "multipart"] }
dotenv = "0"
futures-util = "0"
lazy_static = "1"
pretty_env_logger = "0.4"
sanitize-filename = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tree_magic_mini = "3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
zstd = "0.12"
