[package]
name = "convey"
authors = ["Cryptex"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
dotenv = "0"
lazy_static = "1"
pretty_env_logger = "0.5"
rdenticon = "0.1"
rust-s3 = "0.33"
sanitize-filename = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.5", features = ["fs"] }
tree_magic_mini = "3"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
zstd = "0.13"
